# keepassxc-run

./: .gitignore  .pre-commit-config.yaml  .tagpr  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml  tagpr.yml
ci/: construct-chocolatey-package.py  setup-keepassxc.ps1
package/chocolatey/: keepassxc-run.nuspec
package/chocolatey/legal/: VERIFICATION.txt
package/chocolatey/tools/: chocolateyInstall.ps1
src/keepassxc_run/: cli.py  process.py  secret.py
tests/: test_cli.py
tests/data/: git-credential-keepassxc.json  keepassxc.ini  test_db.xml
