[project]
name = "keepassxc-run"
version = "0.0.1"
description = "KeePassXC runner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.1",
]

[project.scripts]
keepassxc-run = "keepassxc_run.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
]

[tool.ruff]
line-length = 120
